<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/join_league"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:text="@string/write_the_league_code"/>

    <EditText
        android:id="@+id/et_league_code"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:maxLength="20"
        android:hint="@string/write_the_code_of_the_league"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:background="@drawable/bg_edittext_icon"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#26629e">

        <TextView
            android:id="@+id/tv_join"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="?selectableItemBackground"
            android:lines="1"
            android:ellipsize="end"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/join"/>

    </LinearLayout>
</LinearLayout>
