<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#aaffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/match_result_scoring"/>

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/tv_rule_correct_prediction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_rule_correct_margin_of_victory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_rule_correct_outcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_rule_incorrect_prediction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="16sp" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            android:textSize="18sp"
            android:text="@string/predictions_details"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/winner_prize"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            android:textSize="18sp"
            android:text="@string/winner_gets_bragging_rights"
            />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>