<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/world_cup_2018_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_horizontal_margin"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center">

                <ImageView
                    android:visibility="invisible"
                    android:id="@+id/iv_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/world_cup_2018_logo"
                    android:contentDescription="@string/n_a"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_login_input_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:paddingTop="12dp"
                android:paddingBottom="30dp">

                <EditText
                    android:id="@+id/et_username_login"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:padding="8dp"
                    android:background="#33ffffff"
                    android:gravity="center"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
                    android:textColorHint="#66ffffff"
                    android:hint="@string/hint_username"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/et_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:padding="8dp"
                    android:background="#33ffffff"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textColorHint="#66ffffff"
                    android:imeOptions="actionDone"
                    android:hint="@string/hint_password"
                    android:maxLines="1"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp" />


                <RelativeLayout
                    android:id="@+id/bt_login"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="?colorAccent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/login"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:background="?android:attr/selectableItemBackground"/>

                    <ProgressBar
                        android:id="@+id/progressBar_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

            </LinearLayout>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_logo_splash"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:src="@drawable/world_cup_2018_logo"
                android:contentDescription="@string/n_a" />

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/app_state_message_container"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="10dp"
            app:contentPadding="20dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_app_state_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/app_state_unavailable"/>

                <TextView
                    android:id="@+id/tv_app_state_message_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:text="@string/app_state_unavailable_come_back_later"/>

                <android.support.v7.widget.CardView
                    android:id="@+id/try_again_container"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#616161"
                    app:cardCornerRadius="1dp"
                    app:contentPadding="1dp"  >

                    <TextView
                        android:id="@+id/tv_try_again"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:gravity="center"
                        android:textColor="#616161"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:text="@string/error_try_again"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/tv_sign_up"
            android:padding="8dp"
            android:background="#00ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <include
        android:id="@+id/tv_no_network_connection"
        layout="@layout/layout_no_network_connection" />

</RelativeLayout>
